# mpi_document

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.agent/: AGENT.md
.github/workflows/: docker-publish.yml
scripts/: create_sample_pdf.py
src/document_etl/: __init__.py  flow.py  minio_etl_flow.py  minio_etl_pipeline.py  minio_flow.py  minio_pipeline.py  minio_worker.py  models.py  pipeline.py  prefect_flow.py
src/document_etl/sinks/: __init__.py  folder_sink.py  minio_sink.py
src/document_etl/sources/: __init__.py  local_folder.py  minio_bucket.py  transformed_folder.py
src/document_etl/transforms/: __init__.py  docling_transform.py
src/document_etl/transforms/extractors/: __init__.py  converter_factory.py  document_value_adapter.py  image_strategies.py  protocols.py  table_strategy.py  text_block_strategy.py
