[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mpi-document-etl"
version = "0.1.0"
description = "ETL pipeline for extracting text, tables, and images from PDFs/images with Docling."
requires-python = ">=3.10"
dependencies = [
  "docling>=2.91.0",
  "minio>=7.2,<8",
  "pandas>=2.0.0",
  "pydantic>=2.0.0",
]

[project.scripts]
document-etl = "document_etl.flow:main"
sink-to-minio = "document_etl.minio_flow:main"

[tool.setuptools.packages.find]
where = ["src"]
